// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > should render accordion 1`] = `
<div>
  <div
    data-accordion-root=""
    tabindex="0"
  >
    <!---->
     
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        data-path="0"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-checked="false"
            aria-label="expand"
            class="w-4"
            data-disabled="false"
            data-size="small"
            data-state="closed"
            data-tag-icon="true"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="accordion-closed"
            />
            <!---->
          </icon>
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        data-path="1"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-checked="false"
            aria-label="expand"
            class="w-4"
            data-disabled="false"
            data-size="small"
            data-state="closed"
            data-tag-icon="true"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="accordion-closed"
            />
            <!---->
          </icon>
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Accordion > should render accordion 2`] = `
<div>
  <div
    class="another-class"
    data-accordion-root=""
    tabindex="0"
  >
    <!---->
     
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        data-path="0"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-checked="false"
            aria-label="expand"
            class="w-4"
            data-disabled="false"
            data-size="small"
            data-state="closed"
            data-tag-icon="true"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="accordion-closed"
            />
            <!---->
          </icon>
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        data-path="1"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-checked="false"
            aria-label="expand"
            class="w-4"
            data-disabled="false"
            data-size="small"
            data-state="closed"
            data-tag-icon="true"
            role="img"
            tabindex="-1"
          >
            <i
              aria-hidden="true"
              class="accordion-closed"
            />
            <!---->
          </icon>
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;
